--- a/src/java/config/yisan.properties
+++ b/src/java/config/yisan.properties
@@ -10,3 +10,14 @@ db.user=root
 db.password=root
 
 url.007.jishi=http://score.365rich.cn/
+url.007.history=
+url.007=http://www.win007.com/
+url.007.data.repository=http://zq.win007.com/info/index_cn.htm
+
+
+# 秒 分 时 日 月 星期
+history.match.job.cron=*/60 * * * * ?
+history.match.job.run=true
+
+league.job.cron=*/60 * * * * ?
+league.job.run=true
