历史赛事爬取

--- a/src/java/config/yisan.properties
+++ b/src/java/config/yisan.properties
@@ -13,6 +13,7 @@ url.007.jishi=http://score.365rich.cn/
 url.007.history=
 url.007=http://www.win007.com/
 url.007.data.repository=http://zq.win007.com/info/index_cn.htm
+url.007.league=http://zq.win007.com/
 
 
 # 秒 分 时 日 月 星期
