历史赛事爬

--- a/src/java/config/yisan.properties
+++ b/src/java/config/yisan.properties
@@ -17,7 +17,10 @@ url.007.league=http://zq.win007.com/
 
 
 # 秒 分 时 日 月 星期
-history.match.job.cron=*/60 * * * * ?
+history.match.job.cron=*/30 * * * * ?
+history.match.job.run=true
+
+team.job.cron=*/30 * * * * ?
 history.match.job.run=true
 
 league.job.cron=*/60 * * * * ?
