--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,8 @@
         <maven.test.failure.ignore>true</maven.test.failure.ignore>
         <jdk.version>1.8</jdk.version>
         <slf4j.version>1.7.7</slf4j.version>
-        <spring.version>3.2.4.RELEASE</spring.version>
+        <spring.version>4.3.4.RELEASE</spring.version>
+<!--         <spring.version>3.2.4.RELEASE</spring.version> -->
         <junit.version>4.8.1</junit.version>
         <dubbo.version>2.5.4</dubbo.version>
     </properties>
