--- a/src/java/config/yisan.properties
+++ b/src/java/config/yisan.properties
@@ -17,11 +17,14 @@ url.007.league=http://zq.win007.com/
 
 
 # 秒 分 时 日 月 星期
-history.match.job.cron=*/30 * * * * ?
-history.match.job.run=true
+match.job.cron=*/5 * * * * ?
+match.job.run=true
 
-team.job.cron=*/30 * * * * ?
-history.match.job.run=true
+team.job.cron=*/10 * * * * ?
+team.job.run=true
 
 league.job.cron=*/60 * * * * ?
 league.job.run=true
+
+history.match.job.cron=*/30 * * * * ?
+history.match.job.run=true
